--- a/styles/app.css
+++ b/styles/app.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 
+/*CORPO*/
 *{
     margin: 0;
     padding: 0;
     border: 0;
-
 }
 
 body{
@@ -83,160 +83,33 @@ p{
     position: relative;
     left: 6rem;
     bottom: 5rem;
-
+    z-index:1;
 }
 
-.container2{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(9, 228, 173);
-    margin: 1rem;
-    border-radius: 0.5rem;
-    
+/*LOADE*/
 
+#div-load{
+    background:#fff;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
 }
 
-.container2 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6rem;
-    bottom: 5rem;
-}
-
-.container3{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(9, 228, 173);
-    
-    margin: 1rem;
-    border-radius: 0.5rem;
-}
-
-.container3 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6rem;
-    bottom: 5rem;
-}
-
-.container4{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(252, 71, 71);
-    margin: 1rem;
-    border-radius: 0.5rem;
-    
-
-}
-
-.container4 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6.4rem;
-    bottom: 3.3rem;
-}
-
-.container5{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(252, 71, 71);
-    
-    margin: 1rem;
-    border-radius: 0.9rem;
-}
-
-.container5 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6rem;
-    bottom: 3.3rem;
-}
-
-.container6{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(252, 71, 71);
-    margin: 1rem;
-    border-radius: 0.9rem;
-    
-}
-
-.container6 img{
-    height: 6.5rem;
-    width: 7rem;
-    position: relative;
-    left: 6.5rem;
-    bottom: 5.7rem;
-}
-
-.container7{
-    width: 14rem;
-    height: 6.5rem;
-    background-color:rgb(102, 163, 243);
-    
-    margin: 1rem;
-    border-radius: 0.9rem;
-}
-
-.container7 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 5.5rem;
-    bottom: 3.3rem;
-}
-
-.container8{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(102, 163, 243);
-    margin: 1rem;
-    border-radius: 0.9rem;
-    
-}
-
-.container8 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6rem;
-    bottom: 3.5rem;
-}
-
-.container9{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(102, 163, 243);
-    
-    margin: 1rem;
-    border-radius: 0.9rem;
-}
-
-.container9 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6rem;
-    bottom: 3.1rem;
-}
-
-.container10{
-    width: 14rem;
-    height: 6.5rem;
-    background-color: rgb(218, 214, 23);
-    margin: 1rem;
-    border-radius: 0.5rem;
-    
-}
-
-.container10 img{
-    height: 6rem;
-    width: 6rem;
-    position: relative;
-    left: 6rem;
-    bottom: 3.5rem;
-}
+#img-load1{
+    position:absolute;
+    top:0px;left:0px;
+  width: 320px;
+  height: 300px;
+  border-top-color: #FFF;
+  z-index:2;
+}#img-load2{
+    position:absolute;
+    top:0px;left:0px;
+    width: 320px;
+    height: 300px;
+    border-top-color: #FFF;
+    z-index:1;
+  }
