--- a/styles/app.css
+++ b/styles/app.css
@@ -82,11 +82,10 @@ p{
     width: 100%;
     height: 100%;
     z-index: 1000;
-    
-    
+    transition:0.3s;
 }
 
-#img-load1{
+#img-load{
     position:absolute;
     width: 12rem;
     height: 12rem;
@@ -95,14 +94,4 @@ p{
     left:50%;
     top:50%;
     transform: translate(-50%,-50%)
-    
-}#img-load2{
-    position:absolute;
-    width: 12rem;
-    height: 12rem;
-    border-top-color: #FFF;
-    z-index:1;
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%)
-  }
+}
