--- a/styles/app.css
+++ b/styles/app.css
@@ -9,6 +9,7 @@
 
 body{
     font-size:62.5%;
+    transition: 0.3s;
 }
 
 h2{
@@ -20,7 +21,7 @@ h2{
     margin-bottom: 2rem;
     margin-left: 1rem;
 }
-h4{
+.content h4{
     font-family: 'Poppins', sans-serif;
     font-size: 1rem;
     font-weight: 700;
@@ -30,7 +31,7 @@ h4{
     margin-bottom: 0.5rem;
 }
 
-p{
+.content p{
     font-family: 'Poppins', sans-serif;
     font-size: 0.8rem;
     font-weight: 500;
@@ -60,7 +61,6 @@ p{
     margin: 1rem;
     border-radius: 0.5rem;
 
-    
 }
 
 .container1 img{
@@ -114,15 +114,13 @@ p{
     list-style: none;
     justify-content: space-around;
     align-items: center;
+
+    z-index:999;
 }
 
 .menu img{
     height: 3.5vh;
-}
-
-.menu a {
-    color: #252525;
-    transition: 0.5 ease;
+    cursor:pointer;
 }
 
 .menu .active{
@@ -131,4 +129,28 @@ p{
     width: 100%;
     border-radius: 1px;
     transition: 0.5 ease;
+}
+
+.menu .line{
+    position:absolute;
+    top:5vh;
+    left:0vw;
+    width:50px;
+    height:5px;
+    background-color: #0af;
+}
+
+/*DIV INFO*/
+
+footer .info{
+    position:fixed;
+    top:100%;
+    left:0px;
+    width:100%;
+    height:100%;
+    border-top: 2px solid #000;
+    border-radius: 10px;
+    transition:0.5s;
+    background-color: #fff;
+    z-index:2;
 }
