--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -16,7 +16,8 @@
 
 body{
     font-size:62.5%;
-    transition: 0.3s;
+    transition: 0.2s;
+    background:var(--background);
 }
 
 main{
@@ -25,7 +26,7 @@ main{
     position: absolute;
     background:var(--background);
     color:var(--color-text);
-    transition: 0.5s ease-in-out background, .5s ease-in-out color;
+    transition: 0.2s ease-in-out background, .3s ease-in-out color;
 }
 
 h2{
@@ -70,6 +71,8 @@ h2{
     flex-wrap: wrap;
     align-items: center;
     justify-content:center;
+    background:var(--background);
+    transition: 0.2s ease-in-out background, 0.2s ease-in-out color;
 
 }
 
@@ -102,7 +105,7 @@ h2{
     width: 100%;
     height: 100%;
     z-index: 1000;
-    transition:0.3s;
+    transition:0.2s;
 }
 
 #img-load{
@@ -151,7 +154,7 @@ h2{
     background: var(--background);
     color:var(--color-text);
 
-    transition: 0.5s ease-in-out background, 0.5s ease-in-out color;
+    transition: 0.2s ease-in-out background, 0.2s ease-in-out color;
 }
 
 #darkmodeToggle{
