--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -194,11 +194,14 @@ footer .info{
 }
 
 .info p{
+    position: relative;
     color:var(--color-text);
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif, sans-serif;
+    font-family: 'Poppins', Helvetica, sans-serif, sans-serif;
     font-size: 1rem;
     font-weight: 500;
+    text-align: center;
+    margin-left: 8vw;
+    margin-right: 8vw;
 }
 
 .info a{
