--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -55,15 +55,15 @@ h2{
 }
 
 .container p.pp{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 0.8rem;
     font-weight: 500;
-    margin-top:8px;
     margin-left: 1rem;
     color: var(--color-text-cont);
     background-color: rgba(105, 105, 105, 0.2);
     text-align: center;
-    
+    position: relative;
+    bottom: 1rem;
     height: 16px;
     width: 70px;
     border-radius: 1rem;
@@ -72,19 +72,19 @@ h2{
 }
 
 .container p.number{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-size: 1.3rem;
     font-weight: 500;
-    margin-top:8px;
+    
     margin-left: 1rem;
     color: var(--color-text-cont);
     background-color: rgba(105, 105, 105, 0.2);
     align-items: center;
-    position: absolute;
-    left: 15.5rem;
+    position:relative;
+    left: 13.3rem;
     
     height: 22px;
-    width: 50px;
+    width: 58px;
     border-radius: 1rem;
 
     text-transform: capitalize;
@@ -101,7 +101,7 @@ h2{
 }
 
 .container{
-    width: 18rem;
+    width: 19rem;
     height: 6.5rem;
     background-color: var(--containers);
     margin: 1rem;
@@ -112,12 +112,11 @@ h2{
     height: 6rem;
     width: 6rem;
     position: relative;
-    left: 8rem;
-    bottom: 5.7rem;
+    left: 7rem;
+    bottom: 6.3rem;
     z-index:1;
+    
 }
-
-
 
 /*LOADE*/
 
