--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -115,7 +115,7 @@ h2{
     left: 7rem;
     bottom: 6.3rem;
     z-index:1;
-    
+    transition: 0.5s;
 }
 
 /*LOADE*/
@@ -244,4 +244,35 @@ footer .info{
     font-family:'Poppins', sans-serif;
     font-size: 1rem;
     color:var(--color-text);
+}
+
+/*POKEINFO*/
+
+footer .pokeinfo{
+    position:fixed;
+    top:100%;
+    left:0rem;
+    width:100%;
+    height:100%;
+    background-color: brown;
+    transition:0.2s;
+    z-index:3;
+}
+
+footer .pokeinfo .principal{
+    position:absolute;
+    top:0rem;
+    left:0rem;
+    width:100%;
+    height:40vh;
+}
+
+footer .pokeinfo .secundaria{
+    position:absolute;
+    top:40vh;
+    left:0rem;
+    width:100%;
+    height:60vh;
+    background-color:white;
+    border-radius: 30px 30px 0px 0px;
 }
