--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -264,15 +264,15 @@ footer .pokeinfo .principal{
     top:0rem;
     left:0rem;
     width:100%;
-    height:40vh;
+    height:100vh;
 }
 
 footer .pokeinfo .secundaria{
     position:absolute;
-    top:40vh;
+    top:50vh;
     left:0rem;
     width:100%;
     height:60vh;
-    background-color:white;
+    background: var(--background);
     border-radius: 30px 30px 0px 0px;
 }
