--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -269,10 +269,10 @@ footer .pokeinfo .principal{
 
 footer .pokeinfo .secundaria{
     position:absolute;
-    top:50vh;
+    top:55vh;
     left:0rem;
     width:100%;
-    height:60vh;
+    height:40vh;
     background: var(--background);
     border-top-right-radius: 2rem;
     border-top-left-radius: 2rem;
@@ -327,9 +327,57 @@ footer .pokeinfo .nav-list{
 }
 
 footer .pokeinfo .nav-list a{
-    color:black;
+    color:rgb(56, 56, 56);
     text-decoration: none;
     margin-top: 1rem;
     font-family: 'Poppins', sans-serif;
-    font-size: 5vh;
+    font-size: 4vh;
+    font-weight: 700;
+}
+
+footer .pokeinfo .secundaria .tg:not(:target){
+    display: none;
+}
+
+
+footer .pokeinfo .secundaria div.line{
+    width: 100vw;
+    height: 0.1rem;
+    background-color: rgb(92, 92, 92);
+}
+
+footer .pokeinfo .secundaria div#sobre.tg{
+    font-family: 'Poppins', sans-serif;
+    font-size: 3vh;
+    font-weight: 500;
+    color: rgb(136, 136, 136);
+    text-transform: capitalize;
+    position: relative;
+    top:1vh;
+    left:5vw;
+    width: 28vw;
+
+    
+}
+
+footer .pokeinfo .secundaria span{
+    font-family: 'Poppins', sans-serif;
+    font-size: 3vh;
+    font-weight: 500;
+    color: rgb(65, 65, 65);
+    text-transform: capitalize;
+    position:absolute;
+    left:33vw;
+}
+
+footer .pokeinfo .secundaria div#status.tg{
+    font-family: 'Poppins', sans-serif;
+    font-size: 3vh;
+    font-weight: 500;
+    color: rgb(136, 136, 136);
+    text-transform: capitalize;
+    position: relative;
+    top:1vh;
+    left:5vw;
+    width: 28vw;
 }
