--- a/MainFiles/styles/app.css
+++ b/MainFiles/styles/app.css
@@ -389,6 +389,17 @@ footer .pokeinfo .secundaria div#status.tg{
     left:5vw;
     width: 28vw;
 }
+
+ /*CANVAS*/
+
+  footer .pokeinfo .containers .principal .canvas{
+      position:absolute;
+      top:0px;
+      left:0px;
+      width:100%;
+      height:100%;
+  }
+
 /*Barra de progresso*/
   
   .progress-bar1{
